_compass/screen.scss
@import "compass/reset";
@import "compass/utilities/general/clearfix";

@import 'layout';
@import 'syntax';

body {
	font-family: 'Roboto';
	font-size: 17px;
	line-height: 1.3em;
}

body > header {
	background-color: #4391C8;
	color: #fff;

	a {
		color: #fff;

		&:visited {
			color: #fff;
		}
	}
}

body > footer {
	border-top: 1px solid #d8d8d8;
}

body > header h1 {
	font-weight: normal;
	font-size: 64px;
	line-height: 1em;
	text-transform: lowercase;
	margin: 0;
}
body > header p {
	margin: 12px 0;
}
body > header h1 span {
	font-weight: 100;
}

section h1 {
	font-family: 'Roboto Slab';
	font-size: 32px;
	font-weight: normal;
	line-height: 1.3em;
}
section section h1 {
	font-family: 'Roboto';
	font-size: 22px;
	border-left: none;
	padding: 0;
	margin-bottom: 16px;
}

ul.samples {
	list-style-type: none;
	padding: 0;

	li {
		margin-bottom: 24px;
	}
	
	li h1 {
		font-family: 'Roboto';
		font-size: 17px;
		border-bottom: none;
		margin-bottom: 5px;
	}
	
	li p {
		margin: 4px 0;
		font-size: 14px;
		color: #777;
	}
}

a {
	color: #3A6A8C;
	text-decoration: none;
}

code {
	font-family: 'Ubuntu Mono';
}

pre {
	tab-size: 2;
}

.codeblock {
	display: block;
	background-color: #2c2c2c;
	color: #fff;
	line-height: 19px;
	overflow-x: auto;

	.linenums {
		position: absolute;
		margin: 16px 0px 16px 12px;
		padding-right: 8px;
		text-align: right;
		color: #6b6b6b;
		background-color: #2c2c2c;
		border-right: 1px solid #3f3f3f;
	}
	.code {
		width: 100%;
		padding: 16px 16px 16px 48px;

		.codeline {
			display: inline-block;
			width: 100%;

			&:before {
				content: "\200B";
			}
		}
	}
}

a.lineref {
	border-bottom: 1px dotted #000;
	color: inherit;
}

p {
	margin-bottom: 1em;
}

em, i {
	font-style: italic;
}

strong, b {
	font-weight: bold;
}

ul, ol {
	padding-left: 1.5em;
	margin-bottom: 1em;
}

ul {
	list-style-type: disc;
}

ol {
	list-style-type: decimal;
}

.sample {
	h2 {
		margin-bottom: 6px;
		text-transform: uppercase;
		font-size: 12px;
		color: #666;
	}

	.contributors {
		padding: 0;
		margin-bottom: 14px;
	
		li {
			display: inline-block;
	
			a img {
				border-radius: 50%;
				width: 36px;
				height: 36px;
			}
		}
	}

	.adsbygoogle {
		margin-top: 32px;
	}

	.license {
		margin: 1em 0;
		color: #666;
	}
}

.about {
	img {
		float: left;
		margin-right: 16px;
		width: 70px;
	}

	p {
		margin-top: 16px;
		text-transform: uppercase;
		font-size: 12px;
		color: #666;

		a {
			display: block;
			font-size: 17px;
			text-transform: none;
		}
	}
}

.featured {
	.codeblock {
		max-height: 190px;
		overflow: hidden;
		position: relative;

		.linenums {
			margin: 0;
			display: none;
		}

		.code {
			padding-left: 24px;
		}

		&:before {
			content: ' ';
			display: block;
			position: absolute;
			width: 100%;
			height: 190px;
			background-color: transparent;
			background: -webkit-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
			background-image: -moz-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
			background-image: -o-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
			background-image: -linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
			background-image: -ms-linear-gradient(rgba(44, 44, 44, 0) 80%, rgba(44, 44, 44, 1) 98%);
		}
	}

	.lineref {
		border: none;
		cursor: default;
	}
}

.disclaimer {
	padding-bottom: 0;

	p {
		background-color: #eee;
		border: 1px solid #888;
		padding: 16px;
	}
}

